Media queries on small height devices fix

--- a/src/containers/MainPage/Header/Header.module.css
+++ b/src/containers/MainPage/Header/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-    height: 100%;
+    height: 100vh;
     background: url(../../../assets/Images/header.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -28,26 +28,6 @@
     animation: slide-up 1.5s ease-in;
 }
 
-@media screen and (max-height: 800px) {
-    .headerText {
-        font-size: 6rem;
-    }
-    .showSecondaryHeader {
-        font-size: 4rem;
-    }
-}
-@media screen and (max-height: 950px) {
-    .header {
-        grid-template-rows: 60vh auto 20vh;
-    }
-    .headerText {
-        font-size: 9rem;
-    }
-    .showSecondaryHeader {
-        font-size: 6rem;
-    }
-}
-
 @media screen and (max-width: 2150px) {
     .header {
         grid-template-rows: 60vh auto 20vh;
@@ -61,9 +41,6 @@
 }
 
 @media screen and (max-width: 1800px) {
-    .header {
-        grid-template-rows: 70vh auto 20vh;
-    }
     .headerText {
         font-size: 10rem;
     }
@@ -73,9 +50,6 @@
 }
 
 @media screen and (max-width: 1350px) {
-    .header {
-        grid-template-rows: 70vh auto 20vh;
-    }
     .headerText {
         font-size: 8rem;
     }
@@ -85,9 +59,6 @@
 }
 
 @media screen and (max-width: 1150px) {
-    .header {
-        grid-template-rows: 70vh auto 20vh;
-    }
     .headerText {
         font-size: 6rem;
     }
@@ -97,9 +68,6 @@
 }
 
 @media screen and (max-width: 720px) {
-    .header {
-        grid-template-rows: 70vh auto 20vh;
-    }
     .headerText {
         font-size: 5rem;
     }
@@ -109,9 +77,6 @@
 }
 
 @media screen and (max-width: 620px) {
-    .header {
-        grid-template-rows: 70vh auto 20vh;
-    }
     .headerText {
         font-size: 4rem;
     }
