--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
     overflow-x: hidden;
+    height: 100%;
 }
 
 body {
